--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -4,17 +4,17 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Underwater Hockey Tournament Scores</a>
+                <a class="navbar-brand" href="/">Underwater Hockey Scoreboard</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="#navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
+            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+            	<ul class="nav navbar-nav navbar-right">
 					<li>
 						<a href="/">Main</a>
 					</li>
