--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Underwater Hockey Scoreboard</a>
+                <a class="navbar-brand" href="/">Underwater Hockey Scores</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
