--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,7 +1,7 @@
 {% block nav %}
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+    	<div id="nav_bar" class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
@@ -48,7 +48,6 @@
 				</ul>
 	       </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+        </div> <!-- ./container -->
+    </nav> <!-- ./navigation -->
 {% endblock nav %}
