--- a/templates/mobile_layout.html
+++ b/templates/mobile_layout.html
@@ -1,61 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<title>Standings</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1.0">  
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"> 
-	<link rel="stylesheet" href="{{ url_for('static', filename='jquery-ui.css') }}">
-	<script src="{{ url_for('static', filename='jquery-1.11.1.js') }}"></script>
-	<script src="{{ url_for('static', filename='jquery-ui.js') }}"></script>
-	<script>
-	$(function() {
-		$( "#tabs" ).tabs();
-	});
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+	<title>Underwater Hockey Scores</title>
+		
+	<!-- Bootstrap Core CSS -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dataTables.bootstrap.css') }}">
+	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}"> -->
+	<!-- Custom Fonts -->
+	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
 
-	$(function() {
-		$( "#menu" ).menu();
-	});
-	</script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-	<script type="text/javascript">
-		var timeout = 500;
-		var closetimer = 0;
-		var ddmenuitem = 0;
-
-		function jsddm_open() {
-			jsddm_canceltimer();
-			jsddm_close();
-			ddmenuitem = $(this).find('ul').eq(0).css('visibility', 'visible');
-			$('#jsddm > li').unbind('click');
-			return false;
-		}
-
-
-		function jsddm_close() {
-			if(ddmenuitem) ddmenuitem.css('visibility', 'hidden');
-			$('#jsddm > li').bind('click', jsddm_open);
-		}
-
-		function jsddm_timer()
-		{	closetimer = window.setTimeout(jsddm_close, timeout);}
-
-		function jsddm_canceltimer()
-		{	if(closetimer)
-			{	window.clearTimeout(closetimer);
-				closetimer = null;}}
-
-		$(document).ready(function()
-		{	
-			$('#jsddm > li').bind('click mouseover', jsddm_open);
-			$('#jsddm > li').bind('mouseout',  jsddm_timer);
-		});
-
-		document.onclick = jsddm_close;
-	</script>
-
+	<!-- Bootstrap Core JavaScript -->
+	<script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+	<!-- <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/jquery.dataTables.min.js') }}"> </script> -->
+	<script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+	<!-- <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/dataTables.bootstrap.js') }}"> </script> -->
 </head>
 <body>
-	<h1>{{ tournament }}</h1>
+
+	{% block nav %}{% endblock %}
+
+    <!-- Page Content -->
 	{% block tabs %}{% endblock %}
 	{% block games %}{% endblock %}
 	{% block standings %}{% endblock %}
+	{% block places %}{% endblock %}
+	<!-- /.container -->
+	
+
 </body>
+</html>
