Fixes all over the place
- Removed basic_auth and now rely on nginx upstream
- Fixed formating for /update to be part of boot strap
- Reformatted the score input form
- Fixed styling for unfinished games
- Converted times from 24-hour to 12-hour
- SQL Schema change for short_name for tournaments
- Other misc

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -59,8 +59,14 @@
 				</tr>
 			{% endfor %}
 			</tbody>
-		</table>
-		<p class=note>{{ noteText }}</p>
+		</table>	
+		
+		{% if noteText %}
+			<div class="alert alert-info" role="alert">
+				<p>{{ noteText }}</p>
+			</div>
+		{% endif %}
+		
 		</div>
 		{% endblock games %}
 
