--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -18,6 +18,7 @@
 					<li>
 						<a href="/">Main</a>
 					</li>
+					{% if pods %}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -26,6 +27,7 @@
 						{% endfor %}
 						</ul>
 					</li>
+					{% endif %}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams<b class="caret"></b></a>
 						<ul class="dropdown-menu">
