--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -77,7 +77,7 @@
 			<thead>
 				<tr>
 					<th>Rank</th>
-					<th>Pod</th>
+					<!-- <th>Pod</th> -->
 					<th>Team</th>
 					<th>Points</th>
 					<th>Record</th>
@@ -93,22 +93,15 @@
 					{% set rank = 1 %}
 					<tr><td>Rank</td><td>Pod</td><td>Team</td><td>Points</td><td>Record</td><td>GA</td><td>GP</td></tr>
 				{% endif %}
-				{% if rank % 2 == 0 %}
-					{% set class="even" %}
-				{% else %}
-					{% set class="odd" %}
-				{% endif %}
-	
 				<tr>
 					<td>{{ rank }}</td>
-					<td>{{ team.pod}}</td>
+					<!-- <td>{{ team.pod}}</td> -->
 					<td>{{ team.name }}</td>
 					<td>{{ team.points }} </td>
 					<td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
 					<td>{{ team.goals_allowed }}</td>
 					<td>{{ team.games_played }} </td>
 				</tr>
-				{% set rank = rank + 1 %}
 				{% set lastPod = team.pod %}
 			{% endfor %}
 			<tbody>
