Added copyright footer

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,6 +40,10 @@
 	{% block places %}{% endblock %}
 	<!-- /.container -->
 	
-
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">&copy; UWHScores.com 2015 <a href="mailto:info@uwhscores.com">info@uwhscores.com</a>
+		</div>
+	</footer>
 </body>
 </html>
