--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
 	
 	<footer class="footer">
 		<div class="container">
-			<p class="text-muted">&copy; UWHScores.com 2015 <a href="mailto:info@uwhscores.com">info@uwhscores.com</a>
+			<p class="text-muted">&copy; 2015 UWHScores.com <a href="mailto:info@uwhscores.com">info@uwhscores.com</a>
 		</div>
 	</footer>
 </body>
