Removed references to datatables css and js

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -41,8 +41,8 @@
 		<table id=games class="table table-striped">
 			<thead>
 				<tr>
-					<th>Game</th>
-					<th>Start Time</th>
+					<th>#</th>
+					<th>Start</th>
 					<!--<th>Pool</th>
 					<th>Pod</th>-->
 					<th>Black</th>
