--- a/templates/show_update.html
+++ b/templates/show_update.html
@@ -1,7 +1,13 @@
 {% extends "layout.html" %}
 
 {% block games %}
-
+<script>
+jQuery(document).ready(function($) {
+      $(".clickableRow").click(function() {
+            window.document.location = $(this).attr("href");
+      });
+});
+</script>
 <div id="page_body" class="container">
 	<div class="row">
 		<h1 class="page-header">Update scores for {{ tournament }}</h1>		
@@ -13,46 +19,39 @@
 <table id=games class="table table-striped">
 	<thead>
 		<tr>
-			<th>Game</th>
-			<th>Start Time</th>
+			<th>#</th>
+			<th>Start</th>
 			<th>Pool</th>
 			<th>Black</th>
 			<th></th>
 			<th>White</th>
 			<th></th>
-			<th></th>
+			
 		</tr>
 	</thead>
 	<tbody>
 	
-	{% set rank = 1 %}
-	{% for game in games %}
-		{% if rank % 2 == 0 %}
-			{% set class="even" %}
+	{% for game in games -%}
+		{% if (game.black_tid < 0) or (game.white_tid < 0) %}
+		<tr>
 		{% else %}
-			{% set class="odd" %}
+		<tr class='clickableRow' href='{{request.base_url}}?gid={{game.gid}}'>
 		{% endif %}
-		<tr class={{ class }} >
-			{% if game.black_tid < 0 or game.white_tid < 0 %}
-				<td>{{ game.gid }}</td>
-			{% else %}
-				<td><a class=click href='update?gid={{game.gid}}'>{{ game.gid }}</a></td>
-			{% endif %}
+			<td>{{ game.gid }}</td>
 			<td>{{ game.day }} {{ game.start_time }}</td>
 			<td>{{ game.pool }}</td>
 			<td class={{game.style_b}}>{{ game.black }}</td>
 			<td>{{game.score_b}}</td>
 			<td class={{game.style_w}}>{{ game.white }}</td>
 			<td>{{game.score_w}}</td>
-			{% if game.black_tid < 0 or game.white_tid < 0 %}
-				<td>---</td>
-			{% else %}
-				<td><a class=update href='update?gid={{game.gid}}'>Update</a></td>
-			{% endif %}
 		</tr>
-		{% set rank = rank + 1 %}
-	{% endfor %}
+	{%- endfor %}
 	</tbody>
 </table>
+
+<div class="alert alert-info" role="alert">
+	<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
+</div>
+
 </div>
 {% endblock games %}
