--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,6 +1,6 @@
 {% block nav %}
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-inverse" role="navigation">
     	<div id="nav_bar" class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -28,6 +28,7 @@
 						</ul>
 					</li>
 					{% endif %}
+					{% if standings %}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -40,6 +41,7 @@
 						{% endfor %}
 						</ul>
 					</li>
+					{% endif %}
 				</ul>
 	       </div>
             <!-- /.navbar-collapse -->
