--- a/templates/show_update.html
+++ b/templates/show_update.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 
+{% block nav %}
+	{% include "nav_bar.html" with context %}
+{% endblock nav %}
+
 {% block games %}
+
 <script>
 jQuery(document).ready(function($) {
       $(".clickableRow").click(function() {
