--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,9 +11,9 @@
 
 	<!-- Bootstrap Core CSS -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-	<!-- Custom Fonts -->
+	<!-- Custom Fonts le-1.4.5.min.js-->
 	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
-
+	
 	<!-- site specific css -->
 	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
