--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -18,7 +18,7 @@
 					<li>
 						<a href="/">Main</a>
 					</li>
-					{% if pods %}
+					{% if pods -%}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -27,21 +27,21 @@
 						{% endfor %}
 						</ul>
 					</li>
-					{% endif %}
-					{% if standings %}
+					{%- endif %}
+					{% if standings -%}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 						{% set last="" %}
-						{% for team in standings|sort(attribute='name') %}
-							{% if team.name != last %}
+						{% for team in standings|sort(attribute='name') -%}
+							{% if team.name != last -%}
 								<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
-							{% endif %}
+							{%- endif %}
 							{% set last = team.name %}
-						{% endfor %}
+						{%- endfor %}
 						</ul>
 					</li>
-					{% endif %}
+					{%- endif %}
 				</ul>
 	       </div>
             <!-- /.navbar-collapse -->
