--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -32,7 +32,7 @@
 	<div id="tabContents" class="tab-content">
 		<div id="schedule" class="tab-pane fade active in">		
 		<h1>{{ titleText }} Schedule</h1>	
-		<table id=games class="table table-striped">
+		<table id="games" class="table table-striped">
 			<thead>
 				<tr>
 					<th>#</th>
@@ -46,22 +46,22 @@
 				</tr>
 			</thead>
 			<tbody>
-			{% for game in games %}
+			{% for game in games -%}
 				<tr>
 					<td>{{ game.gid }}</td>
 					<td>{{ game.day }} {{ game.start_time }}</td>
 					<!-- <td>{{ game.pool }}</td> -->
-					{% if game.pod_color %}
+					{% if game.pod_color -%}
 						<!-- <td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td> -->
 					{% else %}
 						<!-- <td>--</td> -->
-					{% endif %}
+					{%- endif %}
 					<td class={{game.style_b}}>{{ game.black }}</td>
 					<td>{{game.score_b}}</td>
 					<td class={{game.style_w}}>{{ game.white }}</td>
 					<td>{{game.score_w}}</td>
 				</tr>
-			{% endfor %}
+			{%- endfor %}
 			</tbody>
 		</table>	
 		
@@ -70,7 +70,6 @@
 				<p>{{ noteText }}</p>
 			</div>
 		{% endif %}
-		
 		</div>
 		{% endblock games %}
 
