--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -37,8 +37,8 @@
 				<tr>
 					<th>#</th>
 					<th>Start</th>
-					<!--<th>Pool</th>
-					<th>Pod</th>-->
+					<th>Pool</th>
+					<th>Pod</th>
 					<th>Black</th>
 					<th></th>
 					<th>White</th>
@@ -50,11 +50,13 @@
 				<tr>
 					<td>{{ game.gid }}</td>
 					<td>{{ game.day }} {{ game.start_time }}</td>
-					<!-- <td>{{ game.pool }}</td> -->
-					{% if game.pod_color -%}
-						<!-- <td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td> -->
+					<td>{{ game.pool }}</td>
+					{% if game.pod_color and game.pod -%}
+						<td> <span style="background-color:{{ game.pod_color }}; padding:0.5em">{{ game.pod }}</span></td>
+					{% elif game.pod %}
+						<td>{{ game.pod }}</td>
 					{% else %}
-						<!-- <td>--</td> -->
+						<td>--</td>
 					{%- endif %}
 					<td class={{game.style_b}}>{{ game.black }}</td>
 					<td>{{game.score_b}}</td>
@@ -80,7 +82,7 @@
 			<thead>
 				<tr>
 					<th>Rank</th>
-					<!-- <th>Pod</th> -->
+					<th>Pod</th>
 					<th>Team</th>
 					<th>Points</th>
 					<th>Record</th>
@@ -98,7 +100,7 @@
 				{% endif %}
 				<tr>
 					<td>{{ rank }}</td>
-					<!-- <td>{{ team.pod}}</td> -->
+					<td>{{ team.pod}}</td>
 					<td>{{ team.name }}</td>
 					<td>{{ team.points }} </td>
 					<td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
