--- a/templates/show_update.html
+++ b/templates/show_update.html
@@ -4,7 +4,7 @@
 	{% include "nav_bar.html" with context %}
 {% endblock nav %}
 
-{% block games %}
+{% block main %}
 
 <script>
 jQuery(document).ready(function($) {
@@ -59,4 +59,4 @@ jQuery(document).ready(function($) {
 </div>
 
 </div>
-{% endblock games %}
+{% endblock main %}
