--- a/templates/update_single.html
+++ b/templates/update_single.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block games %}
+{% block main %}
 
 	<script>
 	jQuery(document).ready(function(){
@@ -100,4 +100,4 @@
 		</table>
 	</form>
 </div>
-{% endblock games %}
+{% endblock main %}
